# ELARA-Protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_v0.2.0_SUMMARY.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  fuzz.yml  loadtest.yml  security-audit.yml
config/: ALERTS_QUICK_REFERENCE.md  ALERTS_README.md  ALERTS_TESTING.md  alertmanager-example.yml  alerts.yml  prometheus-example.yml
crates/elara-bench/: BENCHMARKS.md  Cargo.toml  README.md
crates/elara-bench/benches/: crypto_operations.rs  state_reconciliation.rs  time_engine.rs  wire_protocol.rs
crates/elara-bench/src/: lib.rs
crates/elara-core/: Cargo.toml
crates/elara-core/src/: class.rs  error.rs  event.rs  id.rs  invariants.rs  lib.rs  models.rs  science.rs  state.rs  time.rs
crates/elara-crypto/: Cargo.toml  README.md
crates/elara-crypto/src/: aead.rs  identity.rs  lib.rs  ratchet.rs  replay.rs  secure_frame.rs
crates/elara-diffusion/: Cargo.toml  README.md
crates/elara-diffusion/src/: authority.rs  interest.rs  lib.rs  propagation.rs  swarm.rs  topology.rs
crates/elara-ffi/: Cargo.toml  README.md
crates/elara-ffi/src/: error.rs  identity.rs  lib.rs  session.rs  types.rs
crates/elara-fuzz/: ARCHITECTURE.md  Cargo.toml  README.md
crates/elara-fuzz/src/: lib.rs
crates/elara-fuzz/tests/: wire_protocol_fuzzer_test.rs
crates/elara-loadtest/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/elara-loadtest/examples/: custom_scenario.rs  large_deployment.rs  medium_deployment.rs  small_deployment.rs
crates/elara-loadtest/src/: lib.rs  metrics.rs  scenarios.rs  test_node.rs
crates/elara-msp/: Cargo.toml  README.md
crates/elara-msp/src/: lib.rs  text.rs  voice.rs
crates/elara-runtime/: Cargo.toml  HEALTH_SERVER.md  HEALTH_SERVER_IMPLEMENTATION.md  README.md
crates/elara-runtime/examples/: README.md  health_check_config.rs  health_checks.rs  health_server.rs  logging_with_env_filter.rs  metrics_server.rs  observability_minimal.rs  tracing_example.rs  tracing_instrumentation.rs  unified_observability.rs
crates/elara-runtime/src/: health.rs  health_server.rs  lib.rs  node.rs
crates/elara-runtime/src/observability/: TRACING.md  UNIFIED_OBSERVABILITY.md  logging.rs  metrics.rs  metrics_server.rs  mod.rs  tracing.rs
crates/elara-runtime/tests/: health_checks_test.rs  health_server_integration.rs  logging_integration.rs  metrics_server_integration.rs  unified_observability_test.rs
crates/elara-state/: Cargo.toml  README.md
crates/elara-state/src/: field.rs  lib.rs  reconcile.rs
crates/elara-test/: Cargo.toml  README.md
crates/elara-test/benches/: crypto_bench.rs  state_bench.rs  time_bench.rs  wire_bench.rs
crates/elara-test/src/: chaos.rs  chaos_harness.rs  integration.rs  lib.rs  network_test.rs  security.rs  simulator.rs  state_fuzzer.rs  time_simulator.rs
crates/elara-test/tests/: security_tests.rs
crates/elara-time/: Cargo.toml  README.md
crates/elara-time/src/: clock.rs  engine.rs  lib.rs  network.rs
crates/elara-transport/: Cargo.toml  README.md
crates/elara-transport/src/: lib.rs  stun.rs  udp.rs
crates/elara-visual/: Cargo.toml  README.md
crates/elara-visual/src/: encoding.rs  face.rs  keyframe.rs  lib.rs  pose.rs  prediction.rs  scene.rs  state.rs
crates/elara-voice/: Cargo.toml  README.md
crates/elara-voice/src/: encoding.rs  frame.rs  lib.rs  prediction.rs  state.rs  synthesis.rs
crates/elara-wire/: Cargo.toml
crates/elara-wire/src/: extensions.rs  flags.rs  frame.rs  header.rs  lib.rs
docs/: AUDIT_REPORT_v0.2.0.md  ELARA_VS_WEBRTC.md  GETTING_STARTED.md  HARD_INVARIANTS.md  PROTOCOL_MODEL.md  README.md  RINGKASAN.md  SYSTEM_SCIENCE.md
docs/architecture/: COMPREHENSIVE_ARCHITECTURE.md  core-concepts.md  four-pillars.md  representation-profiles.md
docs/implementation/: api-reference.md  crate-structure.md  testing-strategy.md
docs/msp/: msp-v0.md
docs/operations/: CONFIGURATION.md  DEPLOYMENT.md  MONITORING.md  RUNBOOK.md
docs/performance/: BASELINES.md  PERFORMANCE_GUIDE.md
docs/specs/: crypto-binding.md  state-reconciliation.md  time-engine.md  wire-protocol.md
docs/website/: getting-started.html  index.html
examples/: basic_node.rs  state_reconciliation.rs  time_simulation.rs
examples/msp-demo/: Cargo.toml  README.md
examples/msp-demo/src/: chat.rs  lsp.rs  main.rs  msp.rs  network.rs  node.rs  simple_test.rs  ui.rs  vrp.rs
fuzz/: CRYPTO_FUZZER.md  Cargo.toml  README.md  WIRE_PROTOCOL_FUZZER.md
fuzz/fuzz_targets/: crypto_operations.rs  state_reconciliation.rs  wire_protocol.rs
mobile/android/: settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/elara/app/: MainActivity.kt  VideoChatActivity.kt
mobile/android/elara-sdk/: build.gradle.kts
mobile/android/elara-sdk/src/main/: AndroidManifest.xml
mobile/android/elara-sdk/src/main/kotlin/com/elara/sdk/: Elara.kt  ElaraBeautyFilter.kt  ElaraVideoSession.kt  ElaraVideoView.kt
mobile/ios/ElaraSDK/Sources/ElaraSDK/: Elara.swift
scripts/: Cargo.toml  README.md  generate-sbom.rs  publish-batch.sh  publish_to_crates_io.ps1  publish_to_crates_io.sh  security-audit.rs
