[package]
name = "elara-core"
description = "ELARA Protocol - Core types and primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
