[package]
name = "elara-diffusion"
version.workspace = true
edition.workspace = true
description = "ELARA Protocol - Swarm diffusion engine for state propagation, livestream distribution, and group communication"
license.workspace = true
authors = ["ELARA Protocol Contributors"]
repository.workspace = true
homepage = "https://github.com/rafaelsistems/ELARA-Protocol"
documentation = "https://docs.rs/elara-diffusion"
readme = "README.md"
keywords = ["elara", "diffusion", "swarm", "propagation", "livestream"]
categories = ["network-programming", "algorithms"]
rust-version = "1.75"

[dependencies]
elara-core = { version = "0.2.0", path = "../elara-core" }

[dev-dependencies]
