[package]
name = "elara-fuzz"
version.workspace = true
edition.workspace = true
authors = ["ELARA Protocol Contributors"]
description = "Fuzzing infrastructure for ELARA Protocol"
license.workspace = true
repository.workspace = true

[dependencies]
arbitrary = { version = "1.3", features = ["derive"] }

[dev-dependencies]
libfuzzer-sys = "0.4"
elara-core = { path = "../elara-core" }
elara-wire = { path = "../elara-wire" }

[lib]
name = "elara_fuzz"
path = "src/lib.rs"
