[package]
name = "elara-loadtest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Load testing framework for ELARA Protocol with deployment scenarios and performance metrics"

[dependencies]
elara-runtime = { version = "0.2.0", path = "../elara-runtime" }
elara-core = { version = "0.2.0", path = "../elara-core" }
elara-wire = { version = "0.2.0", path = "../elara-wire" }
elara-crypto = { version = "0.2.0", path = "../elara-crypto" }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
proptest = "1.5"
