[package]
name = "elara-msp"
description = "ELARA Protocol - Minimal Survival Profile with text streams, voice processing, and degradation management"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["ELARA Protocol Contributors"]
repository.workspace = true
homepage = "https://github.com/rafaelsistems/ELARA-Protocol"
documentation = "https://docs.rs/elara-msp"
readme = "README.md"
keywords = ["elara", "msp", "text", "voice", "streams"]
categories = ["network-programming", "multimedia"]
rust-version = "1.75"

[dependencies]
elara-core = { version = "0.2.0", path = "../elara-core" }
elara-wire = { version = "0.2.0", path = "../elara-wire" }
elara-crypto = { version = "0.2.0", path = "../elara-crypto" }
elara-time = { version = "0.2.0", path = "../elara-time" }
elara-state = { version = "0.2.0", path = "../elara-state" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
