[package]
name = "elara-runtime"
description = "ELARA Protocol - Node runtime with event loop, session management, and stream processing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["ELARA Protocol Contributors"]
repository = "https://github.com/rafaelsistems/ELARA-Protocol"
homepage = "https://github.com/rafaelsistems/ELARA-Protocol"
documentation = "https://docs.rs/elara-runtime"
readme = "README.md"
keywords = ["elara", "runtime", "node", "event-loop", "p2p"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.75"

[dependencies]
elara-core = "0.1.0"
elara-wire = "0.1.0"
elara-crypto = "0.1.0"
elara-time = "0.1.0"
elara-state = "0.1.0"
elara-transport = "0.1.0"
elara-visual = "0.1.0"
elara-voice = "0.1.0"
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
elara-msp = { path = "../elara-msp" }
proptest = { workspace = true }
