[package]
name = "elara-state"
description = "ELARA Protocol - State field engine with CRDT reconciliation, divergence control, and partition tolerance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["ELARA Protocol Contributors"]
repository.workspace = true
homepage = "https://github.com/rafaelsistems/ELARA-Protocol"
documentation = "https://docs.rs/elara-state"
readme = "README.md"
keywords = ["elara", "state", "crdt", "reconciliation", "convergence"]
categories = ["algorithms", "data-structures"]
rust-version = "1.75"

[dependencies]
elara-core = { version = "0.2.0", path = "../elara-core" }
elara-time = { version = "0.2.0", path = "../elara-time" }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
