[package]
name = "elara-test"
description = "ELARA Protocol - Test harness and chaos testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
elara-core = { path = "../elara-core" }
elara-wire = { path = "../elara-wire" }
elara-crypto = { path = "../elara-crypto" }
elara-time = { path = "../elara-time" }
elara-state = { path = "../elara-state" }
elara-transport = { path = "../elara-transport" }
elara-runtime = { path = "../elara-runtime" }
elara-msp = { path = "../elara-msp" }
rand = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "wire_bench"
harness = false
