[package]
name = "elara-test"
description = "ELARA Protocol - Test harness, chaos testing, and benchmarking tools for protocol validation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["ELARA Protocol Contributors"]
repository = "https://github.com/rafaelsistems/ELARA-Protocol"
homepage = "https://github.com/rafaelsistems/ELARA-Protocol"
documentation = "https://docs.rs/elara-test"
readme = "README.md"
keywords = ["elara", "test", "chaos", "benchmark", "harness"]
categories = ["development-tools", "testing"]
rust-version = "1.75"

[dependencies]
elara-core = "0.1.0"
elara-wire = "0.1.0"
elara-crypto = "0.1.0"
elara-time = "0.1.0"
elara-state = "0.1.0"
elara-transport = "0.1.0"
elara-runtime = "0.1.0"
elara-msp = "0.1.0"
elara-voice = "0.1.0"
# elara-ffi = "0.1.0"  # Will be enabled after publication
rand = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "wire_bench"
harness = false

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "time_bench"
harness = false

[[bench]]
name = "state_bench"
harness = false
