[package]
name = "elara-time"
description = "ELARA Protocol - Time Engine (dual clock, prediction, correction)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
elara-core = { path = "../elara-core" }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
