[package]
name = "elara-time"
description = "ELARA Protocol - Time convergence engine with dual clock system, reality windows, and temporal prediction"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["ELARA Protocol Contributors"]
repository.workspace = true
homepage = "https://github.com/rafaelsistems/ELARA-Protocol"
documentation = "https://docs.rs/elara-time"
readme = "README.md"
keywords = ["elara", "time", "clock", "prediction", "convergence"]
categories = ["algorithms", "network-programming"]
rust-version = "1.75"

[dependencies]
elara-core = { version = "0.2.0", path = "../elara-core" }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
