[package]
name = "elara-transport"
description = "ELARA Protocol - Transport layer (UDP, STUN, multi-path)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["udp", "transport", "stun", "nat", "elara"]
categories = ["network-programming"]

[dependencies]
elara-core = { version = "0.2.0", path = "../elara-core" }
elara-wire = { version = "0.2.0", path = "../elara-wire" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
