[package]
name = "elara-visual"
version.workspace = true
edition.workspace = true
description = "ELARA Protocol - Visual processing with keyframe encoding, prediction, and degradation"
license.workspace = true
authors = ["ELARA Protocol Contributors"]
repository.workspace = true
homepage = "https://github.com/rafaelsistems/ELARA-Protocol"
documentation = "https://docs.rs/elara-visual"
readme = "README.md"
keywords = ["elara", "visual", "video", "encoding", "prediction"]
categories = ["multimedia", "encoding"]
rust-version = "1.75"

[dependencies]
elara-core = { version = "0.2.0", path = "../elara-core" }

[dev-dependencies]
