[package]
name = "elara-voice"
version = "0.1.0"
edition = "2021"
description = "ELARA Protocol - Voice processing with parametric encoding, synthesis, and degradation"
license = "MIT OR Apache-2.0"
authors = ["ELARA Protocol Contributors"]
repository = "https://github.com/rafaelsistems/ELARA-Protocol"
homepage = "https://github.com/rafaelsistems/ELARA-Protocol"
documentation = "https://docs.rs/elara-voice"
readme = "README.md"
keywords = ["elara", "voice", "audio", "encoding", "synthesis"]
categories = ["multimedia", "encoding"]
rust-version = "1.75"

[dependencies]
elara-core = "0.1.0"
rand = "0.8"

[dev-dependencies]
