[package]
name = "elara-voice"
version.workspace = true
edition.workspace = true
description = "ELARA Protocol - Voice processing with parametric encoding, synthesis, and degradation"
license.workspace = true
authors = ["ELARA Protocol Contributors"]
repository.workspace = true
homepage = "https://github.com/rafaelsistems/ELARA-Protocol"
documentation = "https://docs.rs/elara-voice"
readme = "README.md"
keywords = ["elara", "voice", "audio", "encoding", "synthesis"]
categories = ["multimedia", "encoding"]
rust-version = "1.75"

[dependencies]
elara-core = { version = "0.2.0", path = "../elara-core" }
rand = "0.8"

[dev-dependencies]
