[package]
name = "elara-wire"
description = "ELARA Protocol - Wire format and packet encoding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[dependencies]
elara-core = { version = "0.2.0", path = "../elara-core" }
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
