[package]
name = "msp-demo"
version = "0.1.0"
edition = "2021"
description = "ELARA MSP Demo - Text + Voice demonstration"

[[bin]]
name = "msp-demo"
path = "src/main.rs"

[[bin]]
name = "simple-test"
path = "src/simple_test.rs"

[[bin]]
name = "chat"
path = "src/chat.rs"

[dependencies]
elara-core = { path = "../../crates/elara-core" }
elara-wire = { path = "../../crates/elara-wire" }
elara-crypto = { path = "../../crates/elara-crypto" }
elara-time = { path = "../../crates/elara-time" }
elara-state = { path = "../../crates/elara-state" }
elara-transport = { path = "../../crates/elara-transport" }
elara-msp = { path = "../../crates/elara-msp" }

tokio = { version = "1.35", features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util", "io-std"] }
crossterm = "0.27"
rand = "0.8"
